tests/paczka2/big_fuzzy/52279606.err
Error in line 25: eVS4AMvuz A954 219,08
Error in line 27: TdA3cLVcg A954 20,8
Error in line 39: S416 S694 89,9
Error in line 72: TtTnK6 A954 12,0
Error in line 59: sd44 S969 264,3
Error in line 78: sd44 A954 89,2
Error in line 79: sd44 S416 68,2
Error in line 71: 3okw S416 85,1
Error in line 80: sd44 A954 75,3
Error in line 90: eVS4AMvuz S969 57,1
Error in line 93: sd44 S969 93,3
Error in line 97: TdA3cLVcg S969 5,0
Error in line 103: TdA3cLVcg S694 82,7
Error in line 109: 3okw S694 94,p
Error in line 121: eVS4AMvuz S416 74,7
Error in line 123: FCMlw1x5E2 S416 2,4
Error in line 129: FCMlw1x5E2 A954 20,7
Error in line 122: 3okw S694 167,8
Error in line 152: TdA3cLVcg S694 38,2
Error in line 149: eVS4AMvuz A954 3,9
Error in line 160: 3okw A954 58,5
Error in line 174: sd44 S969 37,9
Error in line 188: eVS4AMvuz A954 6,91
Error in line 187: sd44 A954 4,7
Error in line 199: eVS4AMvuz S416 468,9
Error in line 200: eVS4AMvuz S969 100,0
Error in line 205: 3okw S694 89,3
Error in line 204: eVS4AMvuz A954 8,8
Error in line 213: sd44 S694 74,8
Error in line 210: TdA3cLVcg A954 83,8
Error in line 221: TdA3cLVcg S694 21,7
Error in line 225: 3okw S969 34,1
Error in line 230: sd44 S694 6,0
Error in line 245: TtTnK6 S416 78,7
